After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746392 - Nautilus 3.16 missing "Remove from recent"
Nautilus 3.16 missing "Remove from recent"
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.15.x
Other Linux
: Normal normal
: 3.16
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-18 11:06 UTC by alex diavatis
Modified: 2015-05-13 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus-view: restore "Remove from Recent" (2.91 KB, patch)
2015-05-13 12:48 UTC, Carlos Soriano
committed Details | Review

Description alex diavatis 2015-03-18 11:06:05 UTC
Reproduce: Always

1. Open Nautilus
2. Go to Recent View
3. Select some files
4. Right click to open the context menu

Expected: An option to "Remove from Recent"
Output: None

Workaround, on G-C-C's Privacy Panel, you can clear recent from "Usage & History"
Comment 1 Carlos Soriano 2015-05-13 12:48:34 UTC
Created attachment 303307 [details] [review]
nautilus-view: restore "Remove from Recent"

We removed it accidentally in the port to GAction due to the
bad naming of the functions.

Add a TODO for implement a better named functions to not be confused
again.
Comment 2 Carlos Soriano 2015-05-13 13:23:56 UTC
Attachment 303307 [details] pushed as fd7cd39 - nautilus-view: restore "Remove from Recent"