nautilus-view: restore "Remove from Recent"

We removed it accidentally in the port to GAction due to the
bad naming of the functions.

Add a TODO for implement a better named functions to not be confused
again.

https://bugzilla.gnome.org/show_bug.cgi?id=746392